--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,10 @@ eyre = "0.6.12"
 mmap-rs = "0.6.1"
 rand = "0.8.4"
 rayon = "1.10.0"
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+harness = false
+name = "lookup-entry"
